Online shop past final

--- a/my/src/pages/Auth/Auth.scss
+++ b/my/src/pages/Auth/Auth.scss
@@ -30,7 +30,7 @@
     display: block;
     font-size: 16px;
     letter-spacing: 0.1px;
-    color: #adadad;
+    color: slateblue;
   }
   .block {
     width:430px;
