--- a/my/src/Components/Block/Block.scss
+++ b/my/src/Components/Block/Block.scss
@@ -1,5 +1,6 @@
 .block {
+  background-color: darkseagreen;
   padding: 45px;
   //box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.04204);
-  //border-radius: 3px;
+  border-radius: 3px;
 }
